[project]
name = "pishro-lib"
version = "0.1.0"
description = "Pishro is a package manager and deployment tool for docker swarm"
readme = "README.md"
authors = [
    { name = "Siavash Outadi", email = "siavash.outadi@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "docker>=7.1.0",
    "pydantic>=2.11.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
development = [
    "pytest>=8.3.5",
    "types-docker>=7.1.0.20241229",
]
